added a new para

--- a/Views/Home/SendSMS.cshtml
+++ b/Views/Home/SendSMS.cshtml
@@ -14,6 +14,8 @@
         <div class="col-lg-2">
             Name
         </div>
+
+        <p> Hi there i am testing GIT</p>
         <div class="col-lg-10">
             @Html.TextBoxFor(a => a.Name)
         </div>
